feat(home):Add chatbot and slight change in ui

--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@splinetool/react-spline": "^4.0.0",
+    "ai": "^4.3.15",
     "framer-motion": "^12.10.4",
     "next": "15.3.2",
     "postprocessing": "^6.37.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "three": "^0.176.0"
+    "three": "^0.176.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
